crates/core/tests/snapshots/setting_extend_test__setting_extend__named_struct__can_set_opt_vec_string.snap
---
source: crates/core/tests/setting_extend_test.rs
expression: pretty(container.impl_partial_extends_from())
---
fn extends_from(&self) -> Option<schematic::ExtendsFrom> {
    self.a.as_ref().map(|inner| schematic::ExtendsFrom::List(inner.to_owned()))
}
